# project-zomboid-save-auto-backup

./: .gitignore  AGENT_LOGGING.toon  CLAUDE.md  FEATURE_LIST.toon  biome.json  package.json  pnpm-lock.yaml  tailwind.config.js
.claude/commands/: feature-implement.md  fix-according-to-pr.md
.github/workflows/: release.yml
.husky/: commit-msg  pre-commit
scripts/: sync-version.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  clippy.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/src/: auto_backup.rs  backup.rs  config.rs  file_ops.rs  lib.rs  main.rs  restore.rs
src/components/: AutoBackupControl.tsx  BackupList.tsx  Dashboard.tsx  DeleteModal.tsx  Header.tsx  Layout.tsx  RestoreModal.tsx  SaveSelector.tsx  Settings.tsx  Toast.tsx  UndoModal.tsx  index.ts
