[package]
name = "pz-backup-tool"
version = "1.0.2"
description = "Automated backup tool for Project Zomboid saves"
authors = ["woxQAQ"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pz_backup_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }
flate2 = "1.0"
tar = "0.4"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"

